--- a/docs/style.css
+++ b/docs/style.css
@@ -14,9 +14,15 @@ div.side-by-side {
 }
 
 img {
-    width: 20%;
+    width: 40%;
     max-width: 500px;
 
+}
+
+img.screenshot {
+    width: 50%;
+    max-width: 500px;
+    border: 2px solid #444;
 }
 .featureBlock {
     background-color: #9CAF88;
@@ -300,4 +306,12 @@ h1 {
 .resume-page p {
     font-size: 14px;
 }
+
+
+figcaption {
+    color: pink;       /* changes the text color */
+    font-size: 14px;       /* adjust the size */
+    font-style: italic;    /* optional: make it italic */
+    text-align: left;    /* centers the caption under the image */
+    margin-top: 5px;       /* space between image and caption */
 
